Fix unit-button z-index

--- a/temps.css
+++ b/temps.css
@@ -111,7 +111,7 @@ body, html {
     top: 2%;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 100;
+    z-index: 50;
     
     padding: 10px 20px;
     min-width: 60px;
